# python-packaging

./: README.md
materials/: api_cleaning.ipynb  final_script.py  packaging_python.ipynb  requirements_jupyter_notebook.txt  script_for_flake8.py  visualize_iceflow.ipynb  visualize_iceflow_1.ipynb  visualize_iceflow_class_3.ipynb  visualize_iceflow_class_3.py  visualize_iceflow_cleaning_3.ipynb  visualize_iceflow_functions.ipynb  visualize_iceflow_functions_2.ipynb  visualize_iceflow_functions_4.py
python-package/: LICENSE  README.md  pyproject.toml  run_example.py
python-package/src/iceflow/: __init__.py  solver.py  test.txt  tools.py
python-package/src/iceflow_try/: __init__.py  solver.py  tools.py
